<resources>
    <string name="app_name" translatable="false">Bimba</string>
    <string name="no_timetable">No timetable found. Connect to the Internet and wait for a timetable to be downloaded</string>
    <string name="timetable_downloaded">New timetable downloaded</string>
    <string name="title_activity_stop" translatable="false">StopActivity</string>
    <string name="tab_workday_text">Workdays</string>
    <string name="tab_saturday_text">Saturdays</string>
    <string name="tab_sunday_text">Sundays</string>
    <string name="action_change_type">Type</string>
    <string name="departure_type_icon_description" translatable="false">departure type (timetable, VM)</string>
    <string name="departure_to">→ %1$s</string>
    <string name="departure_to_line">%1$s → %2$s</string>
    <string name="departure_at">At %1$s</string>
    <string name="no_database_background" translatable="false">no database background</string>
    <string name="no_db_connect">Connect to the Internet to download the timetable</string>
    <string name="no_db_downloading">Timetable is being downloaded…</string>
    <string name="timetable_downloading">Downloading timetable</string>
    <string name="timetable_downloading_progress" translatable="false">%1$1.2f MiB/%2$1.2f MiB</string>
    <string name="timetable_decompressing">Decompressing timetable</string>
    <string name="search_placeholder">Stop…</string>
    <string name="no_connectivity">No connectivity – can’t update timetable</string>
    <string name="timetable_up_to_date">Timetable is up-to-date</string>
    <string name="validity_failed">Downloaded timetable is corrupted – can’t update</string>
    <string name="error_try_later">Error. Try again later</string>
    <string name="now">Now</string>
    <string name="stop_already_fav">This stop is already in favourites</string>
    <string name="favourite_row_more_button" translatable="false">favourite row more button</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="done">Done</string>
    <string name="favourite_edit">Edit favourite</string>
    <string name="favourite_name">Favourite name</string>
    <string name="edit_favourite_title">Edit ‘%1$s’</string>
    <string name="favourite_element_delete_button" translatable="false">favourite element delete button</string>
    <string name="favourite_element_split_button" translatable="false">favourite element split button</string>
    <string name="no_next_departure">No next departure</string>
    <string name="action_merge">Merge</string>
    <string name="merge_favourites">Merge favourites</string>
    <string name="loading">Loading…</string>
    <string name="departure_in__singular_genitive">In %1$s minute</string>
    <string name="departure_in__plural_genitive">In %1$s minutes</string>
    <string name="departure_in__plural_nominative">In %1$s minutes</string>

    <string name="home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="help">Help</string>
    <string name="navigation_drawer_home_button" translatable="false">navigation drawer home button</string>
    <string name="navigation_drawer_refresh_button" translatable="false">navigation drawer refresh button</string>
    <string name="navigation_drawer_help_button" translatable="false">navigation drawer help button</string>
    <string name="title_activity_help">Help</string>
    <string name="help_text">
        "Why is there no timetable for Saturdays?\n\n"

        "Current official timetable will have been invalid by Saturday so it doesn’t contain times"
        "for Saturdays.\n"
        "Be sure to update timetable on Saturday at the latest.\n\n"

        "Why a favourite card shows ‘No next departure’?\n\n"

        "Favourite cards contain times for today and tomorrow."
        "‘No next departure’ may happen when, e.g. there is no timetable for tomorrow and there"
        "are no more departures today.\n\n"

        "Today is Tuesday but it’s a holiday. Shouldn’t I look at Sundays timetable?\n\n"

        "Official timetable is especially prepared for holidays—it will show up as today (if"
        "it’s Tuesday, it will be on ‘workdays’ tab).\n"
        "Be sure to consult the messages on\nhttps://www.ztm.poznan.pl/en.\n\n"
    </string>
    <string name="departure_row_getting_departures">Getting departures…</string>
    <string name="valid_since">Valid since %1$s</string>
    <string name="valid_till">Valid till %1$s</string>
    <string name="departure_floor" translatable="false">departure floor type (lowFloor)</string>
    <string name="departure_info" translatable="false">departure info icon</string>
    <string name="refreshing_cache">Refreshing cache. May take some time…</string>

    <string name="today">Today</string>
    <string name="no_departures">No departures</string>
    <string name="title_activity_main" translatable="false">LineSpecifyActivity</string>
    <string name="tab_text_line_to">To</string>
    <string name="tab_text_line_fro">Fro</string>
    <string name="timetable_validity_finished">Timetable validity has ended. Connect to the Internet to download a new one in order to continue.</string>
    <string name="timetable_validity_today">Timetable validity ends today.</string>
    <string name="timetable_validity_tomorrow">Timetable validity ends tomorrow.</string>
    <string name="just_departed">Just departed</string>
    <string name="validity_offline_unavailable">Offline timetable unavailable</string>
    <string name="pref_category_timetable">Timetable</string>
    <string name="timetable_source_url" translatable="false">https://bimba.tk/gtfs</string>
    <string name="key_timetable_source_url" translatable="false">key_timetable_source_url</string>
    <string name="title_timetable_source_url">Timetable source</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>

    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
</resources>
